Moved travel time calculation out of Route class.